--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,90 @@
-remote_theme: Drassil/git-wiki
+# (string) Title of your wiki
+title: git-wiki
+description: Git-Wiki demo and documentation
+show_downloads: true
+show_wiki_pages: true
+show_wiki_pages_limit: 10
+paginate: 5
+paginate_path: "/blog/page:num"
+blog_feature: true
+show_wiki_posts: true
+show_wiki_posts_limit: 5
+logo_url: http://drassil.github.io/git-wiki/assets/images/1200px-Wikipedia-logo-v2.svg_.png
+google_analytics:
+git_branch: gh-pages
+theme: 
+use_github_wiki: false
+use_prose_io: true
+search_engine : "js"
+google_cse_token: 007197903287787072094:8rbvkeqo6qw
+wiki_folder : "wiki"
+permalink: /blog/posts/:year/:month/:day/:title:output_ext
+
+#
+# Jekyll
+#
+
+defaults:
+ -
+    scope:
+      path: "" # an empty string here means all files in the project
+    values:
+      layout: "git-wiki-default"
+ -
+    scope:
+      path: ""
+      type: "pages"
+    values:
+      layout: "git-wiki-default"
+ -
+    scope:
+      path: ""
+      type: "posts"
+    values:
+      layout: "git-wiki-post"
+ -
+    scope:
+      path: blog
+    values:
+      layout: "git-wiki-blog"
+
+plugins:
+ - jekyll-feed
+ - jekyll-redirect-from
+ - jekyll-seo-tag
+ - jekyll-sitemap
+ - jekyll-avatar
+ - jemoji
+ - jekyll-mentions
+  
+#
+# INCLUDING HOOKS
+# They are optional, change them only if you need
+# Check wiki documentation to learn how they work
+#
+
+inc_before_toc : 
+inc_after_toc :
+inc_before_content :
+inc_after_content: "drassil/comments.html"
+inc_before_footer :
+inc_after_footer : 
+inc_before_head : 
+inc_after_head : "drassil/head.html"
+inc_before_meta :
+inc_after_meta : 
+inc_before_scripts : 
+inc_after_scripts : 
+inc_before_styles : 
+inc_after_styles : 
+inc_before_header : 
+inc_after_header: 
+inc_before_tail : 
+inc_after_tail : 
+inc_before_tools : 
+inc_after_tools : 
+
+inc_before_page_list : "drassil/sidebar.html"
+inc_after_page_list :
+inc_before_post_list :
+inc_after_post_list :
