--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # (string) Title of your wiki
-title: git-wiki
-description: Git-Wiki demo and documentation
-show_downloads: true
+title: Modme Wiki
+description: An open-source community driven modding wiki
+show_downloads: false
 show_wiki_pages: true
 show_wiki_pages_limit: 10
 paginate: 5
@@ -9,9 +9,9 @@ paginate_path: "/blog/page:num"
 blog_feature: true
 show_wiki_posts: true
 show_wiki_posts_limit: 5
-logo_url: http://drassil.github.io/git-wiki/assets/images/1200px-Wikipedia-logo-v2.svg_.png
+logo_url: http://drassil.github.io/git-wiki/assets/images/logo_scale.svg
 google_analytics:
-git_branch: gh-pages
+git_branch: master
 theme: 
 use_github_wiki: false
 use_prose_io: true
@@ -66,7 +66,7 @@ plugins:
 inc_before_toc : 
 inc_after_toc :
 inc_before_content :
-inc_after_content: "drassil/comments.html"
+inc_after_content:
 inc_before_footer :
 inc_after_footer : 
 inc_before_head : 
