Remove google token, new sidebar

--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ theme:
 use_github_wiki: false
 use_prose_io: false
 search_engine : "js"
-google_cse_token: 007197903287787072094:8rbvkeqo6qw
+google_cse_token:
 wiki_folder : "wiki"
 permalink: /blog/posts/:year/:month/:day/:title:output_ext
 
