Tweak code style, start basic page reflow

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # (string) Title of your wiki
 title: Modme Wiki
-description: An open-source community driven modding wiki
+description: An open-source community driven game modding wiki
 show_downloads: false
 show_wiki_pages: true
 show_wiki_pages_limit: 15
