--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 # (string) Title of your wiki
 title: Modme Wiki
+baseurl: /
 description: An open-source community driven game modding wiki
 show_downloads: false
 show_wiki_pages: true
