--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@ title: Modme Wiki
 baseurl: /
 description: An open-source community driven game modding wiki
 show_downloads: false
-show_wiki_pages: false
-show_wiki_pages_limit: 15
+show_wiki_pages: true
+show_wiki_pages_limit: 0
 paginate: 5
 paginate_path: "/blog/page:num"
 blog_feature: false
